@@ -24,7 +24,9 @@
         dojo.require("dojo.json");
         dojo.require("dojo.lfx.*");
         dojo.require("dojo.style.*");
+        dojo.require("dojo.string.*");
         dojo.require("dojo.widget.Button");
+        dojo.require("dojo.widget.Tooltip");
         dojo.setModulePrefix('acme', 'tests/widget/acme');
         dojo.widget.manager.registerWidgetPackage('acme');
         dojo.require("acme.UserButton");
